fix(dashboard) update user dashboard do display clean and readable buttons to main pages

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -352,6 +352,16 @@ footer {
     @apply flex gap-4;
 }
 
+.button {
+    @apply px-4 py-2 rounded-md bg-light text-white hover:opacity-75 transition-colors duration-200 border border-secondary;
+}
+
+/*.quicklinks.buttons {
+    a {
+        @apply px-4 py-2 rounded-md bg-primary text-white hover:bg-primary/80 transition-colors duration-200;
+    }
+}*/
+
 /* Error pages */
 body.error-page {
     @apply bg-light;
